# django-tables2-column-shifter

./: .gitignore  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  requirements-dev.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml  tests.yaml
django_tables2_column_shifter/: __init__.py  tables.py
django_tables2_column_shifter/locale/el/LC_MESSAGES/: django.mo  django.po
django_tables2_column_shifter/locale/pl/LC_MESSAGES/: django.mo  django.po
django_tables2_column_shifter/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
django_tables2_column_shifter/static/django_tables2_column_shifter/css/: django_tables2_column_shifter.css  django_tables2_column_shifter.min.css
django_tables2_column_shifter/static/django_tables2_column_shifter/js/: django_tables2_column_shifter.js  django_tables2_column_shifter.min.js
django_tables2_column_shifter/templates/django_tables2_column_shifter/: bootstrap2.html  bootstrap3.html  bootstrap4-responsive.html  bootstrap4.html  bootstrap5-responsive.html  bootstrap5.html  table.html
django_tables2_column_shifter/tests/: models.py  settings.py  tables.py  test_base.py  urls.py  views.py
django_tables2_column_shifter/tests/templates/: base.html  base_site.html
testproject/: db.sqlite3  manage.py  requirements.txt
testproject/testproject/: models.py  settings.py  tables.py  urls.py  views.py
testproject/testproject/migrations/: 0001_initial.py
testproject/testproject/templates/: base.html  base_site.html
testproject/testproject/templates/testproject/: index.html  test_base.html  (+5 more)
(+3 files in other folders)
