[flake8]
max-line-length = 100
max-complexity = 10
exclude = .tox,.git,*/migrations/*,*/static/*,build,docs

[isort]
line_length=80
include_trailing_comma=True
multi_line_output=3

[tool:pytest]
DJANGO_SETTINGS_MODULE=django_tables2_column_shifter.tests.settings

[bdist_wheel]
universal = 1

[metadata]
license-file = LICENSE
